# pandatouch-bsp

./: .gitignore  .release-please-manifest.json  LICENSE  README.md  release-please-config.json
.github/ci/: bsp_noglib.py  update_readme_dependencies.py
.github/workflows/: benchmark.yml  build_examples.yml  release-please.yml  upload_component.yml  upload_component_noglib.yml
examples/display_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/display_demo/main/: idf_component.yml  main.c
examples/display_hello/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/display_hello/main/: idf_component.yml  main.c
examples/display_lvgl_benchmark/: CMakeLists.txt  README.md  pytest.ini  pytest_display_lvgl_benchmark.py  sdkconfig.defaults
examples/display_lvgl_benchmark/main/: idf_component.yml  main.c
examples/display_noglib/: CMakeLists.txt  README.md
examples/display_noglib/main/: idf_component.yml  main.c
examples/display_slint/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/display_slint/main/: CMakeLists.txt  idf_component.yml  main.cpp  ui.slint
pandatouch/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  sdkconfig.defaults
pandatouch/doc/: HARDWARE.md
pandatouch/include/bsp/: config.h  display.h  esp-bsp.h  pandatouch.h  touch.h
pandatouch/priv_include/: bsp_err_check.h
pandatouch/src/: bsp_display.c  bsp_touch.c  bsp_usb.c
